[tool.poetry]
name = "cool-ip-api"
version = "0.1.0"
description = "A collections of wrapper for different IP info APIs"
authors = ["sokripon <sokripon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
pydantic = "^1.10.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
